This is my fast ripo 1

--- a/Website full html and Css/index.html
+++ b/Website full html and Css/index.html
@@ -21,6 +21,7 @@
                     <li><a href="#">Contuct Us</a> </li>
                     <li><a href="#">Help</a> </li>
                     <li><a href="#">Live Suport </a> </li>
+                    <li><a href="#">Helth Care </a> </li>
                 </ul>
             </div>
         </nav>
