--- a/branch-larning/index.html
+++ b/branch-larning/index.html
@@ -13,6 +13,7 @@
     </p>
     <h1>Here is input tag</h1>
     <input type="text" value="Simple">
+    <input type="email">
     
 </body>
 </html>
